<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="5dp">


    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"
        tools:src="@tools:sample/avatars" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"

        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/profile_picture">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_text"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:text="@string/username_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_username"
            android:text="@string/company_text"
            android:textColor="@color/github_grey_text" />

        <TextView
            android:id="@+id/user_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_company"
            android:text="@string/location_text"
            android:textColor="@color/github_grey_text" />
        <TextView
            android:id="@+id/user_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_location"
            android:text="@string/repository_text"
            android:textColor="@color/github_grey_text" />
    </RelativeLayout>
</RelativeLayout>